# 2023-FEUP-DA-Proj1

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: network.csv  stations.csv
data/testData/: network.csv  stations.csv
docs/: Doxyfile
docs/html/: _helpy_8h_source.html  _rail_graph_8h_source.html  _railway_8hpp_source.html  _reader_8h_source.html  _station_8hpp_source.html  _utils_8hpp_source.html  annotated.html  class_helpy-members.html  class_helpy.html  class_rail_graph-members.html  class_rail_graph.html  class_railway-members.html  class_railway.html  class_reader-members.html  class_reader.html  class_station-members.html  class_station.html  class_utils-members.html  class_utils.html  classes.html  classfort_1_1property__owner-members.html  classfort_1_1property__owner.html  classfort_1_1table-members.html  classfort_1_1table.html  classfort_1_1table_1_1cell__range-members.html  classfort_1_1table_1_1cell__range.html  classfort_1_1table_1_1default__properties-members.html  classfort_1_1table_1_1default__properties.html  classfort_1_1table_1_1table__cell-members.html  classfort_1_1table_1_1table__cell.html  classfort_1_1table_1_1table__column-members.html  classfort_1_1table_1_1table__column.html  classfort_1_1table_1_1table__row-members.html  classfort_1_1table_1_1table__row.html  classfort_1_1table__manipulator-members.html  classfort_1_1table__manipulator.html  dir_29991b4882b8f2ed2b46c4693572134b.html  dir_4399cacec4c47a266565fec88927560f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_699fe6e509a443e45c28abc148082a1f.html  (+57 more)
docs/latex/: _helpy_8h_source.tex  _rail_graph_8h_source.tex  _railway_8hpp_source.tex  _reader_8h_source.tex  _station_8hpp_source.tex  _utils_8hpp_source.tex  annotated.tex  class_rail_graph.eps  class_rail_graph.tex  files.tex  (+46 more)
src/: Helpy.cpp  Helpy.h  Reader.cpp  Reader.h  Utils.hpp  main.cpp
(+50 files in other folders)
